# flox

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  package.yml
docs/: README.md  api-reference.md  architecture.md  automations.md  configuration.md  development.md  getting-started.md  secrets.md  skills.md  troubleshooting.md  user-guide.md
src/: App.tsx  index.css  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: agents.rs  automation.rs  browser.rs  conversations.rs  db.rs  lib.rs  main.rs  network.rs  scratchpad.rs  secrets.rs  settings.rs  skills.rs
src/components/: Sidebar.tsx
src/components/activity/: LogsView.tsx
src/components/automations/: AutomationCard.tsx  AutomationForm.tsx  AutomationsView.tsx
src/components/chat/: AgentStatusBar.tsx  ApprovalModal.tsx  BrowserSelector.tsx  ChatSidebar.tsx  ChatView.tsx  MessageBubble.tsx
src/components/onboarding/: OnboardingView.tsx
src/components/secrets/: SecretsView.tsx
src/components/settings/: ModelConfigCard.tsx  SettingsView.tsx
src/components/skills/: CreateSkillModal.tsx  SkillsView.tsx
src/components/ui/: Badge.tsx  Button.tsx  Input.tsx  Select.tsx  Toast.tsx  Toggle.tsx
src/lib/: utils.ts
