[package]
name = "flox"
version = "0.1.0"
description = "Flox - AI Browser Automation Desktop App"
authors = []
edition = "2021"

[lib]
name = "flox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
regex = "1"
dirs = "5"
which = "6"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
futures-util = "0.3"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
url = "2"
base64 = "0.22"
once_cell = "1"
rusqlite = { version = "0.32", features = ["bundled"] }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
